--- a/halls/templates/halls/delete_video.html
+++ b/halls/templates/halls/delete_video.html
@@ -10,11 +10,15 @@
 </form>
 
 <div class="row">
-    <div class="col-md-4 mt-3"><div class="card mb-4 shadow-sm">
-    <iframe width="100%" height="225" src="https://www.youtube.com/embed/{{ video.youtube_id}}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <div class="card-body"><p class="card-text">{{ video.title }}</p>
-    </div>
-    </div>
+    <div class="col-md-4 mt-3">
+        <div class="card mb-4 shadow-sm">
+            <iframe width="100%" height="225" src="https://www.youtube.com/embed/{{ video.youtube_id}}"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+            <div class="card-body"><p class="card-text">{{ video.title }}</p>
+            </div>
+        </div>
     </div>
 </div>
 
