--- a/halls/templates/halls/detail.html
+++ b/halls/templates/halls/detail.html
@@ -1,16 +1,32 @@
 {% extends 'halls/base.html' %}
 
 {% block content %}
-<h3>Details</h3>
-<h4>{{ hall.title }}</h4>
-<h4 class="text-muted">{{ hall.user.username }}</h4>
-</br>
-{% for v in details %}
-<p>{{ v.title }}</p>
-<p>{{ v.url }}</p>
-<iframe width="25%" height="225" src="https://www.youtube.com/embed/{{ v.youtube_id }}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-<a href="{% url 'delete-video' v.id %}" class="btn btn-primary">Delete</a>
-</br>
-{% endfor %}
+<div class="container">
+    <h1>{{ hall.title }}</h1>
+    <h4 class="text-muted">{{ hall.user.username|title }}</h4>
+    {% if user.id == hall.user.id %}
+    <a href="{% url 'delete-hall' hall.id %}" class="btn btn-danger">Delete Hall of Fame</a>
+    <a href="{% url 'update-hall' hall.id %}" class="btn btn-primary">Edit Hall of Fame</a>
+    <a href="{% url 'add-video' hall.id %}" class="btn btn-primary">Add video to Hall of Fame</a>
+    {% endif %}
+    <div class="row">
+        {% for video in hall.video_set.all %}
+        <div class="col-md-4 mt-3">
+            <div class="card mb-4 shadow-sm">
+                <iframe width="100%" height="225" src="https://www.youtube.com/embed/{{ video.youtube_id}}"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
+                <div class="card-body">
+                    <p class="card-text">{{ video.title|slice:":50" }}</p>
+                    {%if user.id == hall.user.id %}
+                    <a href="{% url 'delete-video' video.id %}" class="btn btn-danger">Delete</a>
+                    {% endif %}
+                </div>
+            </div>
 
-{% endblock content%}
+        </div>
+        {% endfor %}
+
+    </div>
+    {% endblock content%}
