--- a/halls/templates/halls/home.html
+++ b/halls/templates/halls/home.html
@@ -1,5 +1,35 @@
 {% extends 'halls/base.html' %}
 
 {% block content %}
-<h3>Home</h3>
+<section class="jumbotron text-center">
+    <div class="container">
+        <h1 class="jumbotron-heading">Create your own Hall of Fame YouTube videos!</h1>
+        <p class="lead text-muted">Collect all of yours favourite YouTube videos in one place</p>
+        <p><a href="{% url 'create-hall' %}" class="btn btn-danger">Create Hall of Fame</a></p>
+    </div>
+</section>
+<div class="container">
+    <h3 class="text-center">Recently added videos</h3>
+    <div class="row">
+        {% for hall in halls %}
+        {% for videos in hall.video_set.all %}
+        <div class="col-md-4 mt-3">
+            <div class="card mb-4 shadow-sm">
+                <iframe width="100%" height="225" src="https://www.youtube.com/embed/{{ videos.youtube_id}}"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
+                <div class="card-body">
+                    <p class="card-text">{{ video.title|slice:":50" }}</p>
+                    {%if user.id == hall.user.id %}
+                    <a href="{% url 'delete-video' video.id %}" class="btn btn-danger">Delete</a>
+                    {% endif %}
+                </div>
+            </div>
+
+        </div>
+        {% endfor %}
+        {% endfor %}
+    </div>
+</div>
 {% endblock content%}
