--- a/halls/templates/halls/update.html
+++ b/halls/templates/halls/update.html
@@ -1,12 +1,21 @@
 {% extends 'halls/base.html' %}
 
 {% block content %}
-<h3>Update</h3>
-</br>
-<form method="post" action="">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">Submit</button>
-</form>
-<a href="{% url 'delete-hall' hall.id %}" class="btn btn-danger">Delete</a>
+<div class="container">
+    <h3>Update: {{ hall.title }}</h3>
+    </br>
+    <form method="post" action="">
+        {% csrf_token %}
+        {% load widget_tweaks %}
+        {% for field in form %}
+        <div class="form-group {% if errors %} alert alert-danger {% endif %}">
+            {{ field.errors }}
+            {{ field.label_tag }}
+            {% render_field field class="form-control" %}
+        </div>
+        {% endfor %}
+        <button type="submit" class="btn btn-primary">Submit</button>
+        <a href="{% url 'delete-hall' hall.id %}" class="btn btn-danger">Delete</a>
+    </form>
+</div>
 {% endblock content%}
