--- a/halls/templates/registration/login.html
+++ b/halls/templates/registration/login.html
@@ -6,7 +6,15 @@
   <h3>Login</h3>
   <form method="post" action="">
     {% csrf_token %}
-    {{ form.as_p }}
+        {% load widget_tweaks %}
+        {% for field in form %}
+        <div class="form-group {% if errors %} alert alert-danger {% endif %}">
+            {{ field.errors }}
+            {{ field.label_tag }}
+            {% render_field field class="form-control" %}
+            {% if field.help_text %}<small class="text-muted">{{field.help_text}}</small>{% endif %}
+        </div>
+        {% endfor %}
     <button type="submit" class="btn btn-primary">Login</button>
   </form>
 </div>
